--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
 }
 
 .flex-container {
-	padding: 10px; 
 	margin-left: 50px;
 	margin-right: 60px;
 	display: -webkit-box;
@@ -25,22 +24,27 @@ body {
 
 a {
 	color: inherit;
+	text-decoration: none;
 	
 }
 
 .menuheb {
-	padding: 0px; 
+	padding-top: 20px; 
 	color: #0065FC;
 	list-style: none;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     font-size: 1.5em;
+    border-top: 1px solid;
+    border-top-color: #0065FC;
+}
+
+.flex-container:hover {
 }
 
 
 .menuactiv {
-	padding: 0px; 
 	list-style: none;
     display: inline-flex;
     justify-content: center;
@@ -59,6 +63,7 @@ a {
     justify-content: center;
     align-items: center;
     font-size: 1.5em;
+    padding-top: 20px;
 }
 
 header {
@@ -196,7 +201,7 @@ header {
 	flex-wrap: wrap;
 	align-content: space-between;
 	margin-bottom: 20px;
-	padding: 0px;
+	padding-left: 15px;
 }
 
 .hebergements p {
@@ -213,15 +218,12 @@ header {
 	background-color: #ffffff;
 	border-color: #ffffff;
 	margin-right: 25px;
-	display: flex;
+	display: block;
 	flex-wrap: wrap;
 	align-content: space-between;
-	width: 16.6vw;
+	width: 15vw;
 	height: 15.7vw;
-	padding: 5px;
 	line-height: 0px;
-	margin-left: 15px;
-	cursor: pointer;
 	box-shadow: 0 0 6px 3px #b1b1b14b;
 	margin-bottom: 40px;
 }
@@ -260,7 +262,7 @@ h3 {
 	background-color: #ffffff;
 	border-color: #ffffff;
 	margin-right: 12px;
-	display: flex;
+	display: inline-block;
 	width: 92%;
 	height: 26.5%;
 	padding: 5px;
@@ -319,7 +321,7 @@ h5 {
 	background-color: #F2F2F2;
 	margin-left: 50px;
 	padding: 20px;
-	width: 59%;
+	width: 52%;
 	height: 60%;
 	border-radius: 20px;
 }
@@ -394,20 +396,28 @@ i {
 	align-items: center;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 .imgheb {
 	border-top-right-radius: 20px;
 	border-top-left-radius: 20px;
 	object-fit: cover;
+	width: 100%;
+    height: 59%;
 }
 
 .imagepopulaire {
 	border-bottom-left-radius: 20px;
 	border-top-left-radius: 20px;
-	margin: auto;
 	object-fit: cover;
+	width: 40%;
+    height: 100%;
+    float: left;
 }
 
-.imgactiv,
 .imgactivbig,
 .imgactiv1,
 .imgactiv2,
@@ -415,8 +425,38 @@ i {
 .imgactiv4 {
 	border-top-right-radius: 20px;
 	border-top-left-radius: 20px;
-	margin: auto;
 	object-fit: cover;
+	width: 21vw;
+}
+
+.imgactivbig {
+	height: 540px;
+    padding: 0;
+    margin: 0;
+}
+
+.imgactiv1 {
+	height: 230px;
+    padding: 0;
+    margin: 0;
+}
+
+.imgactiv2 {
+	height: 160px;
+    padding: 0;
+    margin: 0;
+}
+
+.imgactiv3 {
+	height: 215px;
+    padding: 0;
+    margin: 0;
+}
+
+.imgactiv4 {
+	height: 215px;
+    padding: 0;
+    margin: 0;
 }
 
 
@@ -446,7 +486,7 @@ p {
 	flex-direction: column;
 	border-radius: 20px;
 	width: 28%;
-	height: 785px;
+	height: 940px;
 	padding-left: 30px;
 	flex-wrap: nowrap;
 	margin-left: 50px;
@@ -457,6 +497,8 @@ p {
 	width: 85%;
 	height: 20px;
 	font-size: 2em;
+	font-weight: bold;
+	padding-top: 15px;
 
 }
 
@@ -508,7 +550,7 @@ font-size: 2.1em;
     height: 600px;
     margin-bottom: 50px;
     background-color: #ffffff;
-    width: 95%;
+    width: 90%;
 }
 
 .activites h4 {
@@ -526,7 +568,7 @@ footer ul li {
 }
 
 .activite1 {
-    width: 22.6%;
+    width: 405px;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -538,7 +580,7 @@ footer ul li {
 }
 
 .activite4 {
-    width: 22.6%;
+    width: 405px;
     display: flex;
     flex-direction: column;
     height:100%;
@@ -550,7 +592,7 @@ footer ul li {
 
 .activite2 {
 	flex-basis: 60%;
-	width: 90.5%;
+	width: 405px;
     height: 52%;
     border-radius: 20px;
     background-color: #ffffff;
@@ -560,7 +602,7 @@ footer ul li {
 
 .activite3 {
 	flex-basis: 40%;
-	width: 90.5%;
+	width: 405px;
     height: 220px;
     border-radius: 20px;
     background-color: #ffffff;
@@ -570,7 +612,7 @@ footer ul li {
 
 .activite5 {
 	flex-basis: 45%;
-	width: 90.5%;
+	width: 405px;
     height: 48%;
     border-radius: 20px;
     background-color: #ffffff;
@@ -580,7 +622,7 @@ footer ul li {
 
 .activite6 {
 	flex-basis: 45%;
-	width: 90.5%;
+	width: 405px;
     height: 47%;
     border-radius: 20px;
     background-color: #ffffff;
@@ -612,5 +654,4 @@ footer {
   	margin-bottom: 0px;
   }
 
-@media screen and (max-width: 1600px){
-	
+@media screen and (max-width: 1880px){
